# map-poster

./: .ckignore  .cursorignore  .dockerignore  .gitignore  .mcp.json  .oxfmtrc.jsonc  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  README.md  azure-pipelines-github.yml  azure-pipelines.yml  bunfig.toml  check.ts  dev.sh  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  lefthook.yml  opencode.jsonc  package.json  tsconfig.base.json  vitest.config.ts
.changeset/: config.json
.ck/: CHANGELOG.md.ck  CLAUDE.md.ck  README.md.ck  azure-pipelines-github.yml.ck  azure-pipelines.yml.ck  bunfig.toml.ck  check.ts.ck  dev.sh.ck  docker-compose.yaml.ck  lefthook.yml.ck  manifest.json  opencode.jsonc.ck  package.json.ck  tsconfig.base.json.ck  tsconfig.json.ck  vitest.config.ts.ck
.ck/docs/: Docker.md.ck  helm-hooks-migration.md.ck  (+1 more)
.ck/jobs/: Dockerfile.ck
.claude/: check-after-edit.sh  check-after-stop.sh  settings.json
.opencode/: oh-my-opencode.json
.sisyphus/: COMPLETION_SUMMARY.md  boulder.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: db.py  job_queue.py  main.py  osm_import.py  poster_service.py  themes.py
apps/api/app/routes/: admin.py  generate.py
apps/api/tests/: test_generate.py  test_health.py  test_poster_service.py  test_themes.py
docs/: Docker.md  deployment.md  design.md  helm-hooks-migration.md  rootless-docker-analysis.md  sales.md
jobs/: Dockerfile
opensrc/: sources.json
scripts/: effect-diagnostics.ts  opensrc-sync.ts  warmup-ck.ts
tools/: database-readonly-users.md  db-tool.ts  k8s-tool.ts  logs-tool.ts
(+695 files in other folders)
