[project]
name = "map-poster-api"
version = "0.1.0"
description = "FastAPI service for generating map posters"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "map-poster team" }]

dependencies = [
  "fastapi>=0.115.0",
  "geopandas>=1.0.0",
  "geopy>=2.4.0",
  "httpx>=0.27.0",
  "matplotlib>=3.9.0",
  "osmnx>=2.0.0",
  "pillow>=11.0.0",
  "pydantic>=2.10.0",
  "slowapi>=0.1.9",
  "structlog>=24.0.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
